# rustc_codegen_jvm

./: .gitattributes  .gitignore  Cargo.toml  CompareSize.py  Coretests.py  GenerateFiles.py  Instrument.py  Investigate.py  Makefile  Readme.md  Tester.py  build.py  build.sh  config.toml.template  jvm-unknown-unknown.json.template  jvm_build.py.template  stdlib_overlay.py  test_harness.py
.github/workflows/: ci.yml  coretests.yml
asm-processor/: build.gradle.kts
coretests/coretests-patches/: 0001-restricted-std.patch
java-linker/: Cargo.toml
java-linker/src/: main.rs
optimise2/: build.gradle.kts
proguard/: default.pro
runtime/src/: F128.java  F128Math.java  FileSystemSupport.java  I128.java  Intrinsics.java  Numbers.java  PanicSupport.java  Pointer.java  RuntimeSupport.java  RustDrop.java  ThreadSupport.java  TraitObjectCarrier.java  U128.java
runtime/src/symbols/: acoshf128.java  asinhf128.java  coshf128.java  lgammaf128_r.java  log1pf128.java  tgammaf128.java
shim-metadata-gen/: core.json
shim-metadata-gen/src/: main.rs
src/: instrumentation.rs  lib.rs  lower1.rs  lower2.rs  misc.rs  oomir.rs  optimise1.rs  stable_hash.rs
src/lower1/: checked_ops.rs  closures.rs  control_flow.rs  jvm_names.rs  naming.rs  operand.rs  place.rs  statics.rs  types.rs  value_repr.rs
src/lower2/: constant_pool.rs  consts.rs  helpers.rs  jvm.rs  jvm_gen.rs  large_methods.rs  optimise2.rs  shim.rs  stackmaps.rs  translator.rs
src/oomir/: interpret.rs
src/optimise1/: copyprop.rs  dataflow.rs  reachability.rs  reorganisation.rs
stackmapadder/: build.gradle.kts
std/patches/: 0001-jvm-bootstrap.patch  0002-jvm-panic-unwind.patch  0003-jvm-filesystem.patch  0003-jvm-target-proc-macro.patch  0004-unit-bytewise-eq.patch
tests/support/: test_prelude.rs
(+137 files in other folders)
