[package]
name = "rustc_codegen_jvm"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
once_cell = "1.20.2"
ristretto_classfile = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
breadcrumbs = "0.1.5"

[lib]
crate-type = ["dylib"]

[package.metadata.rust-analyzer] 
rustc_private=true
